--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,16 @@ project(mutant)
 include_directories(${PROJECT_SOURCE_DIR})
 
 set(APP_SRC
+  Loader.cpp
+  Lexer.cpp
+  GrammarParser.cpp
+  Parser.cpp
+  WrGen.cpp
+  JsGen.cpp
+  JsFormatter.cpp
+  CppGen.cpp
+  CppFormatter.cpp
+  Compiler.cpp
   main.cpp
   )
 
